･Utilファイルを作成しました｡ ･Utilファイル内にクラス(Timer.cs,CountDownTimer.cs,CountUpTimer.cs,Motion.cs,Range.cs)を追加しました｡

--- a/WireGame_24/WireGame_24/WireGame_24.csproj
+++ b/WireGame_24/WireGame_24/WireGame_24.csproj
@@ -44,6 +44,11 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\CountDownTimer.cs" />
+    <Compile Include="Util\CountUpTimer.cs" />
+    <Compile Include="Util\Motion.cs" />
+    <Compile Include="Util\Range.cs" />
+    <Compile Include="Util\Timer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
