--- a/WireGame_24/WireGame_24/WireGame_24.csproj
+++ b/WireGame_24/WireGame_24/WireGame_24.csproj
@@ -41,6 +41,7 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Actor\Player.cs" />
     <Compile Include="CSVReader.cs" />
     <Compile Include="Def\Screen.cs" />
     <Compile Include="Device\GameDevice.cs" />
