--- a/WireGame_24/WireGame_24/WireGame_24.csproj
+++ b/WireGame_24/WireGame_24/WireGame_24.csproj
@@ -41,6 +41,8 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Actor\GameObject.cs" />
+    <Compile Include="Actor\GameObjectManager.cs" />
     <Compile Include="Actor\Player.cs" />
     <Compile Include="CSVReader.cs" />
     <Compile Include="Def\Screen.cs" />
@@ -49,9 +51,11 @@
     <Compile Include="Device\GameDevice.cs" />
     <Compile Include="Device\Input.cs" />
     <Compile Include="Device\Renderer.cs" />
+    <Compile Include="Device\Sound.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scene\IGameObjectMediator.cs" />
     <Compile Include="Scene\Score.cs" />
     <Compile Include="Util\CountDownTimer.cs" />
     <Compile Include="Util\CountUpTimer.cs" />
@@ -64,6 +68,7 @@
     <Compile Include="Scene\Scene.cs" />
     <Compile Include="Scene\SceneManager.cs" />
     <Compile Include="Scene\Title.cs" />
+    <Compile Include="Util\TimerUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
