--- a/WireGame_24/WireGame_24/WireGame_24.csproj
+++ b/WireGame_24/WireGame_24/WireGame_24.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Actor\Map.cs" />
     <Compile Include="Actor\Player.cs" />
     <Compile Include="Actor\Space.cs" />
+    <Compile Include="Actor\Space2.cs" />
     <Compile Include="Actor\TarGet.cs" />
     <Compile Include="Actor\Wire.cs" />
     <Compile Include="CSVReader.cs" />
