--- a/WireGame_24/WireGame_24/WireGame_24.csproj
+++ b/WireGame_24/WireGame_24/WireGame_24.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Actor\Cushion.cs" />
     <Compile Include="Actor\GameObject.cs" />
     <Compile Include="Actor\GameObjectManager.cs" />
+    <Compile Include="Actor\Goal.cs" />
     <Compile Include="Actor\Interface\IApplicableDead.cs" />
     <Compile Include="Actor\Jump.cs" />
     <Compile Include="Actor\Map.cs" />
